--- a/sp.html
+++ b/sp.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.min.css"/> 
-
+    <link rel="stylesheet" href="sp.css">
     <title>Document</title>
 </head>
 <body >
